Allow building on Java 8